css/style.css
/*------------------------------------------------------------------
Template Name: Maxfix – Digital Agency Portfolio HTML Template
Template URL: [demo url]
Description: Maxfix is a next-generation HTML template converted from a premium Figma design, crafted for digital agencies, design studios, digital marketing agencies, personal portfolios, and creative professionals. It includes 14+ well-structured pages based on a 1770px grid system, featuring 2+ beautifully designed home pages. The codebase is clean, customizable, and organized for seamless editing and scalability across various business and personal website needs.
Author: UiBazar
Author URL: https://uibazar.com
Version: 1.0
-------------------------------------------------------------------

CSS INDEX
===================

1. Basic & Reset Styles
2. Header Area
3. Hero Home One
4. Hero Area

------------------------------------------------------------------*/


@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
/* font-family: 'Outfit', sans-serif; */


/* =============================
* 1. Basic & Reset Styles
============================= */

:root {
  --color-primary: #000000;
  --color-secondary: #FFFB1F;
  --bg-dark: #101010;  
  --bg-light-gray: #f1f1f1; 
  --bg-white: #ffffff; 
  --font-primary: 'Outfit', sans-serif;
  --border-color: rgba(255, 255, 255, 0.10);
}


*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: var(--font-primary);
  background-color: var(--color-primary);
  color: var(--bg-white);
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* Basic Style */
.container{
  max-width: 1770px;
  padding-left: 75px;
  padding-top: 7.5rem;
  padding-right: 75px;
  padding-bottom: 7.5rem;
  margin-left: auto;
  margin-right: auto;
}


/* =============================
* 2. Header Area
============================= */

.header {
  background: transparent;
  padding: 0;
  border-bottom: 1px solid var(--border-color);
}

.header__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: 96px;
  max-height: 96px;
  padding-top:0px;
  padding-bottom:0px;
  position: relative;
  padding-right: 0;
}

.header__logo{
    max-width: 208px;
    max-height: 46px;
}

.logo__img{
    width: 100px;
    height: 100%;
    background-size: cover;
}

.header__nav .nav__list {
  display: flex;
  gap: 30px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.nav__link {
  color: var(--bg-white);
  text-decoration: none;
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  transition: color 0.3s ease;
}

.nav__link:hover {
  color: var(--color-secondary);
}

.header__menu-btn{
    width: 210px;
    height: 95px;
}
 
.header__menu-btn .menu-btn {
  display: block;
  height: 100%;
  /* position: absolute; */
  /* right: 0;
  top: 50%;
  transform: translate(0,-50%); */
  width: 100%;
  height: 100%;
  background-color: var(--color-secondary);
  padding: 12px 30px;
  padding-right: 45px;
  height: 100%;
  border: none;
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 500;
  cursor: pointer;
}


/* =============================
* 2. Hero Home One
============================= */

.hero.hero-homeone .hero__container{
    display: grid;
    align-items: center;
    position: relative;
    overflow: hidden;
    min-height: 100vh;
}

.hero-homeone .hero__content-area{
    display: flex;
    flex-wrap: nowrap;
    gap: 3.75rem;
    padding-top: 5rem;
}

.hero-homeone .hero__image--left{
    min-width: 420px;
    max-height: 570px;
}

.hero-homeone .hero__image--left .hero__image{
    width: 100%;
    height: 100%;
    background-size: cover;
}

.hero-homeone .hero__title{
    font-size: 11rem;
    line-height: 1;
}

.hero-homeone .hero__tagline{
    margin-left: 6rem;
    font-weight: 500;
    line-height: 1;
}

.hero-homeone .hero__header-group{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 3.7rem;
}

.hero-homeone .hero__video-icon-wrap{
    width: 100%;
    height: 100%;
    max-width: 150px;
    max-height: 150px;
}

.hero-homeone .hero__stats{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.hero-homeone .hero__stats-number{
   font-size: 3rem;
   font-weight: 500;
   color: var(--bg-white);
}

.hero-homeone .hero__stats-text{
    font-size: 20px;
    font-weight: 400;
    line-height: 1.5;
    max-width: 175px;
}

.hero-homeone .hero__bottom{
    margin-top: 3.7rem;
    display: flex;
    gap: 5.8em;
    margin-left: 6rem;
}

.hero-homeone .hero__text{
    font-size: 1.5rem;
    line-height: 1.5;
    color: var(--bg-white);
    font-weight: 400;
}

.hero-homeone .hero__image--right{
    max-width: 412px;
    max-height: 325px;
    width: 100%;
    height: 100%;
}
 
.hero__arrow{
    margin-top: 3.75rem;
}

/* Hero Bg Lines */
.hero__line {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  background-color: var(--border-color);
  z-index: 1;
  pointer-events: none;
}

.hero__line--1 {
  left: 25%;
}

.hero__line--2 {
  left: 50%;
}

.hero__line--3 {
  left: 75%;
}

.hero.hero-homeone{
    margin-top: -96px;
}

/* =============================
* 30. Responsive
============================= */


@media (max-width:1730px) {
     /* Hero Home One */
    .hero-homeone .hero__content-area{
        flex-wrap: wrap;
    }
}

@media (max-width:1250px) {
     /* Hero Home One */
    .hero-homeone .hero__tagline, .hero-homeone .hero__bottom{
        margin-left: 0;
    }

    .hero-homeone .hero__title{
        font-size: 8rem;
    }

    .hero-homeone .hero__bottom {
        gap: 3rem;
    }

}
@media (max-width:992px) {
    /* Container */
    .container{
        padding-left: 40px;
        padding-top: 3.75rem;
        padding-right: 40px;
        padding-bottom: 3.75rem;
    }

    /* Header Home One */

    .header__container {
        max-height: 70px;
        min-height: 70px;
    }

    .header__nav{
        display: none;
    }

    .header__menu-btn{
        width: 150px;
        height: 70px;
    }

    /* Hero Home One */
    .hero-homeone .hero__bottom {
        flex-wrap: wrap;
    }

    .hero__header-group{

    }

 
}
@media (max-width:768px) {
    /* Container */
    .container{
        padding-left: 20px;
        padding-top: 5rem;
        padding-right: 20px;
        padding-bottom: 5rem;
    }

    /* Hero Home One */
    .hero-homeone .hero__title {
        font-size: 6rem;
    }

    .hero-homeone .hero__tagline{
        margin-top: 1rem;
    }
}

